--- a/aci-automation/test.yaml
+++ b/aci-automation/test.yaml
@@ -1,29 +1,1 @@
-{
-   "data": {
-      "id": "5f63364868911b73d5fe4eac",
-      "batchId": "5f633644eef41873d5f62c20",
-      "treeId": "5f633643eef41873d5f62c1f",
-      "version": "initial",
-      "nodePath": "base/CORE-ATL-3",
-      "deviceType": "cisco-ios",
-      "specId": "5f63364368911b73d5fe4eab",
-      "inheritedSpecIds": [
-         "5f63364368911b73d5fe4ea9"
-      ],
-      "deviceName": "CORE-ATL-3",
-      "variables": [],
-      "timestamp": "2020-09-17T10:11:16.185Z",
-      "totals": {
-         "errors": 0,
-         "warnings": 0,
-         "infos": 0,
-         "passes": 4
-      },
-      "issues": []
-   },
-   "repo": "test",
-   "path": "simple-acl-test/CORE-ATL-2/ReportDetail.json",
-   "message": "commit complianceReportDetail",
-   "branch": "master",
-   "owner": "itential-demos"
-}
+"#Sample file name: CRxxxxxx_YYYYMMDD_hhmmZZZZZ_port_configure_vars.yml\n#e.g. CR1234567_20200212_0300+0800_port_configure_vars.yml\napic_host: hktko111sf001.hk.hsbc\n# For apic_host of software version 3.1(2), set apic_version: 3\n# For apic_host of software version 4.1(2), set apic_version: 4 instead.\napic_version: 4\ntenant: PRODUCTION\nap: PRODUCTION\nconfig_port_list:\n- description: for test\n  leaf_interface_profile: xxxxxxxx101 # Manual input\n  port_selector: BARE_METAL_HOST_PORTS # Section 2.5\n  pod_id: 1\n  leafs: [101] # the last three stings of the leaf names\n  port: 1/1\n  static_bindings:\n  - epg: VLAN1234\n    interface_type: switch_port\n    interface_mode: native\n    encap_id: 1234\n    deploy_immediacy: lazy\n- description: for production\n  leaf_interface_profile: xxxxxxxx102 # Manual input\n  port_selector: BARE_METAL_HOST_PORTS # Section 2.5\n  pod_id: 1\n  leafs: [101] # the last three stings of the leaf names\n  port: 1/1\n  static_bindings:\n  - epg: VLAN1234\n    interface_type: switch_port\n    interface_mode: native\n    encap_id: 1234\n    deploy_immediacy: lazy\n"
