--- a/aci-automation/test.yaml
+++ b/aci-automation/test.yaml
@@ -1,33 +1,1 @@
-#Sample file name: CRxxxxxx_YYYYMMDD_hhmmZZZZZ_port_configure_vars.yml
-#e.g. CR1234567_20200212_0300+0800_port_configure_vars.yml
-apic_host: hktko111sf001.hk.hsbc
-# For apic_host of software version 3.1(2), set apic_version: 3
-# For apic_host of software version 4.1(2), set apic_version: 4 instead.
-apic_version: 4
-tenant: PRODUCTION
-ap: PRODUCTION
-config_port_list:
-- description: for test
-  leaf_interface_profile: xxxxxxxx101 # Manual input
-  port_selector: BARE_METAL_HOST_PORTS # Section 2.5
-  pod_id: 1
-  leafs: [101] # the last three stings of the leaf names
-  port: 1/1
-  static_bindings:
-  - epg: VLAN1234
-    interface_type: switch_port
-    interface_mode: native
-    encap_id: 1234
-    deploy_immediacy: lazy
-- description: for production
-  leaf_interface_profile: xxxxxxxx102 # Manual input
-  port_selector: BARE_METAL_HOST_PORTS # Section 2.5
-  pod_id: 1
-  leafs: [101] # the last three stings of the leaf names
-  port: 1/1
-  static_bindings:
-  - epg: VLAN1234
-    interface_type: switch_port
-    interface_mode: native
-    encap_id: 1234
-    deploy_immediacy: lazy
+"test"
